[package]
name = "AskAI"
version = "0.1.0"
edition = "2021"
description = "A Discord bot where you can ask an AI questions"
publish = true
license = "GPL-3.0"
readme = "Readme.md"
repository = "https://github.com/Nereuxofficial/askai"

[lib]

[dependencies]
shuttle-service = { version = "0.7.2", features = ["bot-serenity"] }
anyhow = "1.0.66"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-secrets = "0.7.2"
tracing = "0.1.37"
reqwest = "0.11.12"
serde_json = "1.0.87"
ai21 = "0.1.4"