[package]
name = "AskAI"
version = "0.1.0"
edition = "2021"
description = "A Discord bot where you can ask an AI questions"
publish = true
license = "GPL-3.0"
readme = "Readme.md"
repository = "https://github.com/Nereuxofficial/askai"

[dependencies]
anyhow = "1.0.66"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "http"] }
serde = "1.0"
toml = "0.5.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
reqwest = "0.11.12"
serde_json = "1.0.87"
tokio = { version = "1.15.0", features = ["full"] }
rust-bert = "0.19.0"